--- a/Day#6_NumPy_Assignment.ipynb
+++ b/Day#6_NumPy_Assignment.ipynb
@@ -19,11 +19,77 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b679b4da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.ones((3, 4), dtype=int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f955a18b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 1, 1, 1],\n",
+       "       [1, 1, 1, 1],\n",
+       "       [1, 1, 1, 1]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7795306d",
    "metadata": {},
    "source": [
     "## Q#2: Create y array with elements equal to 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b654aa0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = np.zeros((3, 4), dtype=\"int64\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1c404e3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
    ]
   },
   {
@@ -35,11 +101,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ece49baa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xy_add = np.add(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "aba3e5ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 1, 1, 1],\n",
+       "       [1, 1, 1, 1],\n",
+       "       [1, 1, 1, 1]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xy_add"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ed854f4c",
    "metadata": {},
    "source": [
     "## Q#4: Print x array characteristics (e.g: dimension, shape, size, type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "807627c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x type is:  int64\n",
+      "x shape is:  (3, 4)\n",
+      "x dimension is:  2\n",
+      "x size is:  12\n",
+      "x mean is:  (32, 8)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"x type is: \", x.dtype)\n",
+    "print(\"x shape is: \", x.shape)\n",
+    "print(\"x dimension is: \", x.ndim)\n",
+    "print(\"x size is: \", x.size)\n",
+    "print(\"x mean is: \", x.strides)"
    ]
   },
   {
@@ -57,11 +182,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "46d30fd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[11, 12],\n",
+       "       [13, 14],\n",
+       "       [15, 16]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w = np.arange(11, 17).reshape(3, 2)\n",
+    "w"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0e62bd09",
    "metadata": {},
    "source": [
     "## Q#6: Create z array contains the numbers from 1 to 3."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "edeca1ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.        , 1.04081633, 1.08163265, 1.12244898, 1.16326531,\n",
+       "       1.20408163, 1.24489796, 1.28571429, 1.32653061, 1.36734694,\n",
+       "       1.40816327, 1.44897959, 1.48979592, 1.53061224, 1.57142857,\n",
+       "       1.6122449 , 1.65306122, 1.69387755, 1.73469388, 1.7755102 ,\n",
+       "       1.81632653, 1.85714286, 1.89795918, 1.93877551, 1.97959184,\n",
+       "       2.02040816, 2.06122449, 2.10204082, 2.14285714, 2.18367347,\n",
+       "       2.2244898 , 2.26530612, 2.30612245, 2.34693878, 2.3877551 ,\n",
+       "       2.42857143, 2.46938776, 2.51020408, 2.55102041, 2.59183673,\n",
+       "       2.63265306, 2.67346939, 2.71428571, 2.75510204, 2.79591837,\n",
+       "       2.83673469, 2.87755102, 2.91836735, 2.95918367, 3.        ])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z = np.linspace(1, 3)\n",
+    "z"
    ]
   },
   {
@@ -73,11 +253,138 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "da5becbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = np.resize(z, (25,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "51db59a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.        ,  1.04081633,  1.08163265,  1.12244898,  1.16326531,\n",
+       "        1.20408163,  1.24489796,  1.28571429,  1.32653061,  1.36734694,\n",
+       "        1.40816327,  1.44897959,  1.48979592,  1.53061224,  1.57142857,\n",
+       "        1.6122449 ,  1.65306122,  1.69387755,  1.73469388,  1.7755102 ,\n",
+       "        1.81632653,  1.85714286,  1.89795918,  1.93877551,  1.97959184,\n",
+       "        2.02040816,  2.06122449,  2.10204082,  2.14285714,  2.18367347,\n",
+       "        2.2244898 ,  2.26530612,  2.30612245,  2.34693878,  2.3877551 ,\n",
+       "        2.42857143,  2.46938776,  2.51020408,  2.55102041,  2.59183673,\n",
+       "        2.63265306,  2.67346939,  2.71428571,  2.75510204,  2.79591837,\n",
+       "        2.83673469,  2.87755102,  2.91836735,  2.95918367,  3.        ,\n",
+       "       11.        , 12.        , 13.        , 14.        , 15.        ,\n",
+       "       16.        ])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newArray = np.append(z, w)\n",
+    "newArray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "123cfbfe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newArray.shape = (8,7)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7e009910",
    "metadata": {},
    "source": [
     "## Q#8: Print all elements of \"newArray\" using the loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "5a2bbb74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "1.0408163265306123\n",
+      "1.0816326530612246\n",
+      "1.1224489795918366\n",
+      "1.163265306122449\n",
+      "1.2040816326530612\n",
+      "1.2448979591836735\n",
+      "1.2857142857142856\n",
+      "1.3265306122448979\n",
+      "1.3673469387755102\n",
+      "1.4081632653061225\n",
+      "1.4489795918367347\n",
+      "1.489795918367347\n",
+      "1.530612244897959\n",
+      "1.5714285714285714\n",
+      "1.6122448979591835\n",
+      "1.6530612244897958\n",
+      "1.693877551020408\n",
+      "1.7346938775510203\n",
+      "1.7755102040816326\n",
+      "1.816326530612245\n",
+      "1.8571428571428572\n",
+      "1.8979591836734693\n",
+      "1.9387755102040816\n",
+      "1.9795918367346939\n",
+      "2.020408163265306\n",
+      "2.061224489795918\n",
+      "2.1020408163265305\n",
+      "2.142857142857143\n",
+      "2.183673469387755\n",
+      "2.224489795918367\n",
+      "2.2653061224489797\n",
+      "2.3061224489795915\n",
+      "2.3469387755102042\n",
+      "2.387755102040816\n",
+      "2.4285714285714284\n",
+      "2.4693877551020407\n",
+      "2.510204081632653\n",
+      "2.5510204081632653\n",
+      "2.591836734693877\n",
+      "2.63265306122449\n",
+      "2.6734693877551017\n",
+      "2.7142857142857144\n",
+      "2.7551020408163263\n",
+      "2.7959183673469385\n",
+      "2.836734693877551\n",
+      "2.877551020408163\n",
+      "2.9183673469387754\n",
+      "2.9591836734693877\n",
+      "3.0\n",
+      "11.0\n",
+      "12.0\n",
+      "13.0\n",
+      "14.0\n",
+      "15.0\n",
+      "16.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in newArray.flat:\n",
+    "    print(i)"
    ]
   },
   {
@@ -89,11 +396,97 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "1432a0c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newArray = newArray.reshape(14, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "ec75615d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.        ,  1.04081633,  1.08163265,  1.12244898],\n",
+       "       [ 1.16326531,  1.20408163,  1.24489796,  1.28571429],\n",
+       "       [ 1.32653061,  1.36734694,  1.40816327,  1.44897959],\n",
+       "       [ 1.48979592,  1.53061224,  1.57142857,  1.6122449 ],\n",
+       "       [ 1.65306122,  1.69387755,  1.73469388,  1.7755102 ],\n",
+       "       [ 1.81632653,  1.85714286,  1.89795918,  1.93877551],\n",
+       "       [ 1.97959184,  2.02040816,  2.06122449,  2.10204082],\n",
+       "       [ 2.14285714,  2.18367347,  2.2244898 ,  2.26530612],\n",
+       "       [ 2.30612245,  2.34693878,  2.3877551 ,  2.42857143],\n",
+       "       [ 2.46938776,  2.51020408,  2.55102041,  2.59183673],\n",
+       "       [ 2.63265306,  2.67346939,  2.71428571,  2.75510204],\n",
+       "       [ 2.79591837,  2.83673469,  2.87755102,  2.91836735],\n",
+       "       [ 2.95918367,  3.        , 11.        , 12.        ],\n",
+       "       [13.        , 14.        , 15.        , 16.        ]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newArray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "fed601ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.        ,  1.16326531,  1.32653061,  1.48979592,  1.65306122,\n",
+       "         1.81632653,  1.97959184,  2.14285714,  2.30612245,  2.46938776,\n",
+       "         2.63265306,  2.79591837,  2.95918367, 13.        ],\n",
+       "       [ 1.04081633,  1.20408163,  1.36734694,  1.53061224,  1.69387755,\n",
+       "         1.85714286,  2.02040816,  2.18367347,  2.34693878,  2.51020408,\n",
+       "         2.67346939,  2.83673469,  3.        , 14.        ],\n",
+       "       [ 1.08163265,  1.24489796,  1.40816327,  1.57142857,  1.73469388,\n",
+       "         1.89795918,  2.06122449,  2.2244898 ,  2.3877551 ,  2.55102041,\n",
+       "         2.71428571,  2.87755102, 11.        , 15.        ],\n",
+       "       [ 1.12244898,  1.28571429,  1.44897959,  1.6122449 ,  1.7755102 ,\n",
+       "         1.93877551,  2.10204082,  2.26530612,  2.42857143,  2.59183673,\n",
+       "         2.75510204,  2.91836735, 12.        , 16.        ]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.transpose(newArray)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f40b57c3",
    "metadata": {},
    "source": [
     "## Q#10: Decrement all elements of \"newArray\" with 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "fcb32315",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newArray = np.subtract(newArray, 1)"
    ]
   },
   {
@@ -105,11 +498,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "fe368e7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max:  15.0\n",
+      "Min:  0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Max: \", np.max(newArray))\n",
+    "print(\"Min: \", np.min(newArray))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c5d5d4ca",
    "metadata": {},
    "source": [
     "## Q#12: Print the first row of \"newArray\" using indexing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "2a99bca4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.         0.04081633 0.08163265 0.12244898]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(newArray[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b83dd361",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(14, 4)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newArray.shape"
    ]
   },
   {
@@ -121,11 +573,53 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "4e2effdb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([13]), array([0]))"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where(newArray == 12)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "932b5c3d",
    "metadata": {},
    "source": [
     "## Q#14: Print the numbers equal 0 and 13 of \"newArray\" using Slicing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "2ee57f5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0., 13.])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newArray[(newArray == 0) | (newArray == 13)]"
    ]
   },
   {
@@ -137,11 +631,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "7550add6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        ],\n",
+       "       [0.16326531],\n",
+       "       [0.32653061],\n",
+       "       [0.48979592],\n",
+       "       [0.65306122],\n",
+       "       [0.81632653],\n",
+       "       [0.97959184],\n",
+       "       [1.14285714],\n",
+       "       [1.30612245]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newArray[:9, 0].reshape(9,1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e6d104c5",
    "metadata": {},
    "source": [
     "## Q#16: Change the shape of \"newArray\" to (3,2)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "1bc9ff0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 0.16326531],\n",
+       "       [0.32653061, 0.48979592],\n",
+       "       [0.65306122, 0.81632653]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newArray[:6, 0].reshape(3,2)"
    ]
   },
   {
@@ -155,7 +701,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -169,7 +715,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
